--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		<link rel="stylesheet" type="text/css" href="css/revealer.css" />
 		<link rel="stylesheet" type="text/css" href="css/pater.css" />
 		<script>document.documentElement.className = 'js';</script>
+		<!--[if IE]>
+			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 	</head>
 	<body class="demo-overview loading">
 		<svg class="hidden">
@@ -39,21 +42,24 @@
 		<main>
 			<section class="content content--full flexy intro">
 				<header class="codrops-header">
-					<p class="codrops-header__title diam">-depimomo</p>
+					<a href="http://monicadevikristiadi.com"><p class="codrops-header__title diam">-depimomo</p><a>
 				</header>
+				<a class="link link--takiri">
 				<h2 class="content__title content__title--center">
+					<span>Fortuna Favi Fortus</span>
 					<div id="rev-1" class="content__title__inner">Monica Devi</div><br/>
 					<div id="rev-2" class="content__title__inner content__title__inner--offset-1">Kristiadi</div>
 				</h2>
+				</a>
 			</section>
 			<div id="overlay"></div>
 			<nav class="menu">
 				<button class="btn btn--close"><svg class="icon icon--cross"><use xlink:href="#icon-cross"></use></svg></button>
 				<ul class="menu__inner">
-					<li class="menu__item"><a class="menu__link" href="#">Work</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">Play</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">Chat</a></li>
-					<li class="menu__item"><a class="menu__link" href="#">Party</a></li>
+					<li class="menu__item"><a class="menu__link" href="#">Profile</a></li>
+					<li class="menu__item"><a class="menu__link" href="#">Project</a></li>
+					<li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+					<li class="menu__item"><a class="menu__link" href="http://www.monicadevikristiadi.com/journal">Journal</a></li>
 				</ul>
 			</nav>
 			<button class="btn btn--menu">map<svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg></button>
@@ -124,7 +130,7 @@
 				
 				var rev1 = new RevealFx(document.querySelector('#rev-1'), {
 					revealSettings : {
-						bgcolor: '#7f40f1',
+						bgcolor: '#FF6B35',
 						onCover: function(contentEl, revealerEl) {
 							contentEl.style.opacity = 1;
 						}
@@ -134,7 +140,7 @@
 
 				var rev2 = new RevealFx(document.querySelector('#rev-2'), {
 					revealSettings : {
-						bgcolor: '#fcf652',
+						bgcolor: '#D8F793',
 						delay: 250,
 						onCover: function(contentEl, revealerEl) {
 							contentEl.style.opacity = 1;
