--- a/split.html
+++ b/split.html
@@ -40,38 +40,6 @@
 			</symbol>
 		</svg>
 		<main>
-			<a class="pater" href="https://goo.gl/zAoxvr">
-				<img class="pater__img" src="img/sponsor/HackReactorLogo.svg" alt="Hack Reactor" />
-				<div class="pater__text">
-					<h2 class="pater__title">Your CS success starts here.</h2>
-					<p class="pater__desc">Hack Reactor's 12-week immersive coding school is accepting applications for onsite and online courses. <strong>Apply now and become a software engineer.</strong></p>
-				</div>
-			</a>
-			<header class="codrops-header">
-				<div class="codrops-links">
-					<a class="codrops-icon codrops-icon--prev" href="https://tympanus.net/Development/MusicalInteractions/" title="Previous Demo"><svg class="icon icon--arrow"><use xlink:href="#icon-arrow"></use></svg></a>
-					<a class="codrops-icon codrops-icon--drop" href="https://tympanus.net/codrops/?p=29372" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
-				</div>
-				<h1 class="codrops-header__title">Block Reveal Effects</h1>
-				<nav class="demos">
-					<a class="demo" href="index.html">Overview</a>
-					<a class="demo" href="menu.html">Menu</a>
-					<a class="demo" href="modal.html">Modal</a>
-					<a class="demo" href="form.html">Form</a>
-					<a class="demo demo--current" href="split.html">Split layout</a>
-					<a class="github" href="https://github.com/codrops/BlockRevealers/">/Github</a>
-				</nav>
-			</header>
-			<section class="content">
-				<div class="dual">
-					<div class="dual__inner" id="rev-1">
-						<div class="dual__half"></div>
-					</div>
-					<div class="dual__content">
-						Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.<span class="author">― Richard Feynman</span>
-					</div>
-				</div>
-			</section>
 			<section class="content flexy flexy--center">
 				<div class="media">
 					<div id="rev-2" class="media__inner"><img class="media__image" src="img/5.jpg" alt="Image" /></div>
@@ -79,6 +47,16 @@
 						<button class="btn btn--tool"><svg class="icon icon--heart"><use xlink:href="#icon-heart"></use></svg></button>
 						<button class="btn btn--tool"><svg class="icon icon--comment"><use xlink:href="#icon-comment"></use></svg></button>
 						<button class="btn btn--tool"><svg class="icon icon--download"><use xlink:href="#icon-download"></use></svg></button>
+					</div>
+				</div>
+			</section>
+			<section class="content">
+				<div class="dual">
+					<div class="dual__inner" id="rev-x">
+						<div class="dual__half"></div>
+					</div>
+					<div class="dual__content">
+						Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.<span class="author">― Richard Feynman</span>
 					</div>
 				</div>
 			</section>
@@ -106,8 +84,10 @@
 			function init() {
 				document.body.classList.remove('loading');
 
-				var splitContent = document.querySelector('.dual__content'),
-					rev1 = new RevealFx(document.querySelector('#rev-1'), {
+				var scrollElemToWatch = document.querySelector('#rev-x'),
+					splitContent = document.querySelector('.dual__content'),
+					watcher = scrollMonitor.create(scrollElemToWatch, -300),
+					revx = new RevealFx(scrollElemToWatch, {
 						revealSettings : {
 							bgcolor: '#2d2c2c',
 							direction: 'rl',
@@ -121,8 +101,11 @@
 						}
 					});
 
-				rev1.reveal();
-
+				watcher.enterViewport(function() {
+					revx.reveal();
+					watcher.destroy();
+				});
+				/*
 				var scrollElemToWatch = document.getElementById('rev-2'),
 					watcher = scrollMonitor.create(scrollElemToWatch, -300),
 					mediaToolbar = document.querySelector('.media__toolbar'),
@@ -142,7 +125,7 @@
 				watcher.enterViewport(function() {
 					rev2.reveal();
 					watcher.destroy();
-				});
+				});*/
 			}
 		})();
 		</script>
